flex alignment fix

--- a/express/blocks/pricing-summary/pricing-summary.css
+++ b/express/blocks/pricing-summary/pricing-summary.css
@@ -123,7 +123,6 @@ main .pricing-summary .pricing-plan {
 
 main .pricing-summary .pricing-price-wrapper {
   display: flex;
-  align-items: flex-end;
   justify-content: center;
   gap: 4px;
 }
@@ -160,6 +159,7 @@ main .pricing-summary .pricing-price > sup {
 main .pricing-summary .pricing-plan-suf {
   font-size: var(--body-font-size-s);
   line-height: var(--body-line-height);
+  align-self: flex-end;
 }
 
 main .pricing-summary .pricing-description > p,
